# profile_kit

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs
src/: error.rs  lib.rs  model.rs
src/repository/: mod.rs  traits.rs
tests/: model_test.rs  repository_test.rs
