[package]
name = "profile_kit"
version = "0.1.0"
edition = "2024"
authors = ["Jerry Maheswara  <jerrymaheswara@gmail.com>"]
description = "A flexible, lightweight Rust library for managing user profiles."
license = "Apache-2.0"
repository = "https://github.com/jerry-maheswara-github/profile_kit"
documentation = "https://docs.rs/profile_kit"
readme = "README.md"
keywords = ["profile", "user", "kit", "identity", "management"]
categories = ["web-programming", "authentication"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v7"] }
thiserror = "2.0.12"
serde_json = "1.0.140"